--- a/documentation/operators/and-then-when.html
+++ b/documentation/operators/and-then-when.html
@@ -14,8 +14,7 @@ id: and-then-when
    <h3>combine sets of items emitted by two or more Observables by means of Pattern and Plan intermediaries</h3>
    <figure>
     <img src="images/and_then_when.C.png" width="640" alt="And/Then/When" />
-   </figure>
-   <p>
+    <figcaption><p>
     The combination of the <span class="operator">And</span>, <span class="operator">Then</span>,
     and <span class="operator">When</span> operators behave much like the
     <span class="operator">Zip</span> operator, but they do so by means of intermediate data
@@ -24,7 +23,8 @@ id: and-then-when
     <span class="operator">Then</span> operates on such <code>Pattern</code> objects, transforming
     them in a <code>Plan</code>. <span class="operator">When</span> in turn transforms these various
     <code>Plan</code> objects into emissions from an Observable.
-   </p>
+    </p></figcaption>
+   </figure>
 
    <h4>See Also</h4>
    <ul>
