--- a/documentation/operators/backpressure.html
+++ b/documentation/operators/backpressure.html
@@ -58,7 +58,7 @@ id: backpressure
  <a href="window.html"><span class="operator">Window</span></a>.
 </p>
 
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="buffer.html"><span class="operator">Buffer</span></a></li>
  <li><a href="sample.html"><span class="operator">Sample</span></a></li>
