--- a/documentation/operators/switch.html
+++ b/documentation/operators/switch.html
@@ -27,7 +27,7 @@ id: switch
 </figure>
 
 
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="amb.html"><span class="operator">Amb</span></a></li>
  <li><a href="concat.html"><span class="operator">Concat</span></a></li>
@@ -83,6 +83,7 @@ id: switch
      <figcaption><p>
       RxJS implements this operator as <code>switch</code>
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 3)
     .select(function (x) { return Rx.Observable.range(x, 3); })
