--- a/documentation/operators/template.html
+++ b/documentation/operators/template.html
@@ -14,14 +14,13 @@ id: oPERATOR
 <h3>SHORT_DESCRIPTION</h3>
 
 <figure>
-  <img src="images/OPERATOR.png" width="640" alt="OPERATOR" />
+ <img src="images/OPERATOR.c.png" width="640" alt="OPERATOR" />
+ <figcaption><p>
+  LONG_DESCRIPTION
+ </p></figcaption>
 </figure>
 
-<p>
- LONG_DESCRIPTION
-</p>
-
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href=""><cite>Introduction to Rx</cite>: </a></li>
 </ul>
