--- a/documentation/operators/average.html
+++ b/documentation/operators/average.html
@@ -14,14 +14,14 @@ id: average
    <h3>calculates the average of numbers emitted by an Observable and emits this average</h3>
    <figure>
     <img src="images/average.c.png" width="640" alt="Average" />
+    <figcaption><p>
+     The <span class="operator">Average</span> operator operates on an Observable that emits numbers
+     (or items that can be evaluated as numbers), and emits a single value: the average of all of
+     the numbers emitted by the source Observable.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Average</span> operator operates on an Observable that emits numbers
-    (or items that can be evaluated as numbers), and emits a single value: the average of all of
-    the numbers emitted by the source Observable.
-   </p>
 
-   <h4>See Also:</h4>
+   <h4>See Also</h4>
    <ul>
     <li><a href="sum.html"><span class="operator">Sum</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
@@ -49,7 +49,7 @@ id: average
       <code>averageDouble</code>, <code>averageFloat</code>, <code>averageInteger</code>, and
       <code>averageLong</code>. The following example shows how these operators work:
      </p>
-     <h4>Sample code:</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 def myObservable = Observable.create({ aSubscriber ->
   if(false == aSubscriber.isUnsubscribed()) aSubscriber.onNext(4);
@@ -108,7 +108,7 @@ Sequence complete</pre></div>
        RxJS implements this operator as <code>average</code>. The following code sample shows how
        to use it:
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 9).average();
 
@@ -133,7 +133,7 @@ Completed</pre></div></figcaption>
        item, as in the illustration above, which emits the average number of sides on the figures
        emitted by the source Observable.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var arr = [
     { value: 1 },
