--- a/documentation/operators/buffer.html
+++ b/documentation/operators/buffer.html
@@ -14,26 +14,26 @@ id: buffer
 <h3>periodically gather items emitted by an Observable into bundles and emit these bundles rather than emitting the items one at a time</h3>
 
 <figure>
-  <img src="images/Buffer.png" width="640" alt="Buffer" />
-</figure>
-
-<p>
+ <img src="images/Buffer.png" width="640" alt="Buffer" />
+ <figcaption><p>
   The <span class="operator">Buffer</span> operator transforms an Observable that emits items into
   an Observable that emits buffered collections of those items. There are a number of variants in
   the various language-specific implementations of <span class="operator">Buffer</span> that
   differ in how they choose which items go in which buffers.
-</p><p>
+ </p><p>
   Note that if the source Observable issues an <code>onError</code> notification,
   <span class="operator">Buffer</span> will pass on this notification immediately without first
   emitting the buffer it is in the process of assembling, even if that buffer contains items that
   were emitted by the source Observable before it issued the error notification.
-</p><p>
+ </p></figcaption>
+</figure>
+<p>
   The <a href="window.html"><span class="operator">Window</span></a> operator is similar to
   <span class="operator">Buffer</span> but collects items into separate Observables rather than
   into data structures before reemitting them.
 </p>
 
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
   <li><a href="window.html"><span class="operator">Window</span></a></li>
   <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Buffer"><cite>Introduction to Rx</cite>: Buffer</a></li>
@@ -206,7 +206,7 @@ id: buffer
       them more manageable. You could, for example, close and emit a buffer of items from a bursty
       Observable periodically, at a regular interval of time.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = bursty.buffer(500, TimeUnit.MILLISECONDS);</pre></div>
      </figcaption>
@@ -219,7 +219,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = bursty.buffer(500, TimeUn
       <a href="throttle.html"><span class="operator">Throttle</span></a> operator
       (<code>debounce</code> in RxGroovy) to emit a buffer closing indicator to the buffer operator.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 // we have to multicast the original bursty Observable so we can use it
 // both as our source and as the source for our buffer closing selector:
@@ -366,7 +366,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = burstyMulticast.buffer(bu
       them more manageable. You could, for example, close and emit a buffer of items from a bursty
       Observable periodically, at a regular interval of time.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code java"><pre>
 Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = bursty.buffer(500, TimeUnit.MILLISECONDS);</pre></div>
      </figcaption>
@@ -379,7 +379,7 @@ Observable&lt;List&lt;Integer&gt;&gt; burstyBuffered = bursty.buffer(500, TimeUn
       <a href="throttle.html"><span class="operator">Throttle</span></a> operator
       (<code>debounce</code> in RxJava) to emit a buffer closing indicator to the buffer operator.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code java"><pre>
 // we have to multicast the original bursty Observable so we can use it
 // both as our source and as the source for our buffer closing selector:
