--- a/documentation/operators/concat.html
+++ b/documentation/operators/concat.html
@@ -14,13 +14,14 @@ id: concat
    <h3>emit the emissions from two or more Observables without interleaving them</h3>
    <figure>
     <img src="images/concat.C.png" width="640" alt="Concat" />
+    <figcaption><p>
+     The <span class="operator">Concat</span> operator concatenates the output of multiple
+     Observables so that they act like a single Observable, with all of the items emitted by the
+     first Observable being emitted before any of the items emitted by the second Observable (and
+     so forth, if there are more than two).
+    </p></figcaption>
    </figure>
    <p>
-    The <span class="operator">Concat</span> operator concatenates the output of multiple
-    Observables so that they act like a single Observable, with all of the items emitted by the
-    first Observable being emitted before any of the items emitted by the second Observable (and
-    so forth, if there are more than two).
-   </p><p>
     In some ReactiveX implementations there is also a <span class="operator">ConcatMap</span>
     operator (a.k.a. <code>concat_all</code>, <code>concat_map</code>,
     <code>concatMapObserver</code>, <code>for</code>, <code>forIn</code>/<code>for_in</code>
@@ -38,7 +39,7 @@ id: concat
     <span class="operator">Concat</span> never interleaves the emissions from multiple Observables.
    </p>
 
-   <h4>See Also:</h4>
+   <h4>See Also</h4>
    <ul>
     <li><a href="catch.html"><span class="operator">Catch</span></a></li>
     <li><a href="merge.html"><span class="operator">Merge</span></a></li>
@@ -85,6 +86,7 @@ id: concat
        Observable of Observables, and concatenates each of these Observables in the order that they
        are emitted.
       </p>
+      <h4>Sample Code</h4>
       <div class="code groovy"><pre>
 odds  = Observable.from([1, 3, 5, 7]);
 evens = Observable.from([2, 4, 6]);
