--- a/documentation/operators/count.html
+++ b/documentation/operators/count.html
@@ -14,17 +14,18 @@ id: count
    <h3>count the number of items emitted by the source Observable and emit only this value</h3>
    <figure>
     <img src="images/Count.png" width="640" alt="Count" />
+    <figcaption><p>
+     The <span class="operator">Count</span> operator transforms an Observable that emits items into
+     an Observable that emits a single value that represents the number of items emitted by the
+     source Observable.
+    </p><p>
+     If the source Observable terminates with an error, <span class="operator">Count</span> will pass
+     this error notification along without emitting an item first. If the source Observable does not
+     terminate at all, <span class="operator">Count</span> will neither emit an item nor terminate.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Count</span> operator transforms an Observable that emits items into
-    an Observable that emits a single value that represents the number of items emitted by the
-    source Observable.
-   </p><p>
-    If the source Observable terminates with an error, <span class="operator">Count</span> will pass
-    this error notification along without emitting an item first. If the source Observable does not
-    terminate at all, <span class="operator">Count</span> will neither emit an item nor terminate.
-   </p>
-   <h4>See Also:</h4>
+
+   <h4>See Also</h4>
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#Count"><cite>Introduction to Rx</cite>: Count</a></li>
    </ul>
@@ -50,7 +51,7 @@ id: count
       In RxGroovy the operator is called <code>count</code> and the Observable it creates emits an
       Integer value. There is also a <code>countLong</code> whose Observable emits a Long value.
      </p>
-     <h4>Sample code:</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 def myObservable = Observable.create({ aSubscriber -&gt;
   if(false == aSubscriber.isUnsubscribed()) aSubscriber.onNext('Three');
@@ -78,6 +79,7 @@ Sequence complete</pre></div>
       In RxJava the operator is called <code>count</code> and the Observable it creates emits an
       Integer value. There is also a <code>countLong</code> whose Observable emits a Long value.
      </p>
+     <h4>Sample Code</h4>
      <div class="code java"><pre>
 String[] items = new String[] { "one", "two", "three" };
 assertEquals( new Integer(3), Observable.from(items).count().toBlocking().single() );</pre></div>
@@ -104,6 +106,7 @@ assertEquals( new Integer(3), Observable.from(items).count().toBlocking().single
       <em>all</em> of the items emitted by the source Observable, simply pass <code>count</code> a
       predicate that always returns <code>true</code>:
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 numberOfItems = someObservable.count(function() { return true; });</pre></div>
      <p>
@@ -129,6 +132,7 @@ numberOfItems = someObservable.count(function() { return true; });</pre></div>
      <p>
       RxKotlin implements this operator as <code>count</code>.
      </p>
+     <h4>Sample Code</h4>
      <div class="code kotlin"><pre>
 val list = listOf(1, 2, 3, 4, 5)
 assertEquals( 5, Observable.from(list)!!.count()!!.toBlocking()!!.single() )</pre></div>
@@ -151,6 +155,7 @@ assertEquals( 5, Observable.from(list)!!.count()!!.toBlocking()!!.single() )</pr
       <code>true</code>. Otherwise, it will emit a count of all items emitted by the source
       Observable.
      </p>
+     <h4>Sample Code</h4>
      <div class="code python"><pre>
 numberOfItems = someObservable.count()
 numberOfNegativeItems = someObservable.count(lambda x: x &lt; 0)</pre></div>
