--- a/documentation/operators/delay.html
+++ b/documentation/operators/delay.html
@@ -14,14 +14,15 @@ id: delay
    <h3>shift the emissions from an Observable forward in time by a particular amount</h3>
    <figure>
     <img src="images/delay.c.png" width="640" alt="Delay" />
+    <figcaption><p>
+     The <span class="operator">Delay</span> operator modifies its source Observable by pausing for a particular
+     increment of time (that you specify) before emitting each of the source Observable&#8217;s items. This has
+     the effect of shifting the entire sequence of items emitted by the Observable forward in time by that
+     specified increment.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Delay</span> operator modifies its source Observable by pausing for a particular
-    increment of time (that you specify) before emitting each of the source Observable&#8217;s items. This has
-    the effect of shifting the entire sequence of items emitted by the Observable forward in time by that
-    specified increment.
-   </p>
-   <h4>See Also:</h4>
+
+   <h4>See Also</h4>
    <ul>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/13_TimeShiftedSequences.html#Delay"><cite>Introduction to Rx</cite>: Delay</a></li>
    </ul>
@@ -219,7 +220,7 @@ id: delay
        This operator operates by default on the <code>timeout</code> Scheduler, but you can override this by
        passing in another Scheduler as an optional second parameter.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 3)
     .delay(new Date(Date.now() + 1000));
@@ -255,7 +256,7 @@ Completed</pre></div>
        Observable into a function that returns an Observable and then monitoring those Observables. When any
        such Observable completes, the Observable returned by <code>delay</code> emits the associated item.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable
     .range(0, 3)
@@ -283,7 +284,7 @@ Completed</pre></div>
        an Observable that sets a delay before <code>delayWithSelector</code> subscribes to the source
        Observable after it itself is subscribed to.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable
     .range(0, 3)
