--- a/documentation/operators/do.html
+++ b/documentation/operators/do.html
@@ -23,7 +23,7 @@ id: do
  </p></figcaption>
 </figure>
 
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/09_SideEffects.html#Do"><cite>Introduction to Rx</cite>: Do</a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/11_AdvancedErrorHandling.html#Finally"><cite>Introduction to Rx</cite>: Finally</a></li>
@@ -131,6 +131,7 @@ id: do
       The <code>doOnTerminate</code> operator registers an <code>Action</code> which will be called just
       <em>after</em> the resulting Observable terminates, whether normally or with an error.
      </p>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 def numbers = Observable.from([1, 2, 3, 4, 5]);
 
@@ -259,6 +260,7 @@ Finally</pre></div>
           and <code>onCompleted</code>) that <code>do</code>/<code>tap</code> will call along with the
           similarly-named functions of any of its observers.</li>
      </ol>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 /* Using an observer */
 var observer = Rx.Observer.create(
@@ -316,6 +318,7 @@ Completed</pre></div>
       optionally pass a second parameter that will be the &ldquo;<code>this</code>&rdquo; object from the
       point of view of your callback function when it executes.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 3)
   .doOnNext(
@@ -346,6 +349,7 @@ Completed</pre></div>
       optionally pass a second parameter that will be the &ldquo;<code>this</code>&rdquo; object from the
       point of view of your callback function when it executes.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.throw(new Error());
   .doOnError(
@@ -371,6 +375,7 @@ Error: Error</pre></div>
       optionally pass a second parameter that will be the &ldquo;<code>this</code>&rdquo; object from the
       point of view of your callback function when it executes.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 3)
   .doOnCompleted(
@@ -397,6 +402,7 @@ Completed</pre></div>
       resulting Observable terminates, whether normally (<code>onCompleted</code>) or abnormally
       (<code>onError</code>).
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.throw(new Error())
     .finally(function () {
