--- a/documentation/operators/flatmap.html
+++ b/documentation/operators/flatmap.html
@@ -14,30 +14,29 @@ id: flatMap
 <h3>transform the items emitted by an Observable into Observables, then flatten the emissions from those into a single Observable</h3>
 
 <figure>
-  <img src="images/flatMap.c.png" width="640" alt="FlatMap" />
+ <img src="images/flatMap.c.png" width="640" alt="FlatMap" />
+ <figcaption><p>
+  The <span class="operator">FlatMap</span> operator transforms an Observable by applying a function
+  that you specify to each item emitted by the source Observable, where that function returns an
+  Observable that itself emits items. <span class="operator">FlatMap</span> then merges the emissions
+  of these resulting Observables, emitting these merged results as its own sequence.
+ </p><p>
+  This method is useful, for example, when you have an Observable that emits a series of items that
+  themselves have Observable members or are in other ways transformable into Observables, so that you
+  can create a new Observable that emits the complete collection of items emitted by the
+  sub-Observables of these items.
+ </p><p>
+  Note that <span class="operator">FlatMap</span> <em>merges</em> the emissions of these Observables,
+  so that they may interleave.
+ </p><p>
+  In several of the language-specific implementations there is also an operator that does
+  <em>not</em> interleave the emissions from the transformed Observables, but instead emits these
+  emissions in strict order, often called <span class="operator">ConcatMap</span> or something
+  similar.
+ </p></figcaption>
 </figure>
 
-<p>
- The <span class="operator">FlatMap</span> operator transforms an Observable by applying a function
- that you specify to each item emitted by the source Observable, where that function returns an
- Observable that itself emits items. <span class="operator">FlatMap</span> then merges the emissions
- of these resulting Observables, emitting these merged results as its own sequence.
-</p><p>
- This method is useful, for example, when you have an Observable that emits a series of items that
- themselves have Observable members or are in other ways transformable into Observables, so that you
- can create a new Observable that emits the complete collection of items emitted by the
- sub-Observables of these items.
-</p><p>
- Note that <span class="operator">FlatMap</span> <em>merges</em> the emissions of these Observables,
- so that they may interleave.
-</p><p>
- In several of the language-specific implementations there is also an operator that does
- <em>not</em> interleave the emissions from the transformed Observables, but instead emits these
- emissions in strict order, often called <span class="operator">ConcatMap</span> or something
- similar.
-</p>
-
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="map.html"><span class="operator">Map</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#SelectMany"><cite>Introduction to Rx</cite>: SelectMany</a></li>
@@ -65,7 +64,7 @@ id: flatMap
      <figcaption><p>
       RxGroovy implements the <code>flatMap</code> operator.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 // this closure is an Observable that emits three numbers
 numbers   = Observable.from([1, 2, 3]);
@@ -242,6 +241,7 @@ Sequence complete</pre></div>
      </p><p>
       &ldquo;<code>selectMany</code>&rdquo; is an alias for <code>flatMap</code>.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable
     .range(1, 2)
@@ -314,6 +314,7 @@ Completed</pre></div>
      </p><p>
       &ldquo;<code>selectSwitch</code>&rdquo; is an alias for <code>flatMapLatest</code>.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable
     .range(1, 2)
@@ -350,6 +351,7 @@ Completed</pre></div>
      </p><p>
       &ldquo;<code>selectManyObserver</code>&rdquo; is an alias for <code>flatMapObserver</code>.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.range(1, 3)
     .flatMapObserver(
