--- a/documentation/operators/groupby.html
+++ b/documentation/operators/groupby.html
@@ -14,18 +14,17 @@ id: groupBy
 <h3>divide an Observable into a set of Observables that each emit a different subset of items from the original Observable</h3>
 
 <figure>
-  <img src="images/groupBy.c.png" width="640" alt="GroupBy" />
+ <img src="images/groupBy.c.png" width="640" alt="GroupBy" />
+ <figcaption><p>
+  The <span class="operator">GroupBy</span> operator divides an Observable that emits items into
+  an Observable that emits Observables, each one of which emits some subset of the items from the
+  original source Observable. Which items end up on which Observable is typically decided by a
+  discriminating function that evaluates each item and assigns it a key. All items with the same key
+  are emitted by the same Observable.
+ </p></figcaption>
 </figure>
 
-<p>
- The <span class="operator">GroupBy</span> operator divides an Observable that emits items into
- an Observable that emits Observables, each one of which emits some subset of the items from the
- original source Observable. Which items end up on which Observable is typically decided by a
- discriminating function that evaluates each item and assigns it a key. All items with the same key
- are emitted by the same Observable.
-</p>
-
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="window.html"><span class="operator">Window</span></a></li>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#GroupBy"><cite>Introduction to Rx</cite>: GroupBy</a></li>
@@ -60,6 +59,7 @@ id: groupBy
       The following sample code uses <code>groupBy</code> to transform a list of numbers into two
       lists, grouped by whether or not the numbers are even:
      </p>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 def numbers = Observable.from([1, 2, 3, 4, 5, 6, 7, 8, 9]);
 def groupFunc = { return(0 == (it % 2)); };
@@ -151,6 +151,7 @@ Sequence complete</pre></div>
       <li>a function that accepts an item from the source Observable and returns an item to be emitted in its place by one of the resulting Observables</li>
       <li>a function used to compare two keys for identity (that is, whether items with two keys should be emitted on the same Observable)</li>
      </ol>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var codes = [
     { keyCode: 38}, // up
@@ -212,6 +213,7 @@ Completed</pre></div>
       <li>(required) a function that returns an Observable, the emissions from which trigger the termination of any open Observables</li>
       <li>a function used to compare two keys for identity (that is, whether items with two keys should be emitted on the same Observable)</li>
      </ol>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var codes = [
     { keyCode: 38}, // up
