--- a/documentation/operators/just.html
+++ b/documentation/operators/just.html
@@ -14,26 +14,25 @@ id: just
 <h3>create an Observable that emits a particular item</h3>
 
 <figure>
-  <img src="images/just.c.png" width="640" alt="Just" />
+ <img src="images/just.c.png" width="640" alt="Just" />
+ <figcaption><p>
+  The <span class="operator">Just</span> operator converts an item into an Observable that emits
+  that item.
+ </p><p>
+  <span class="operator">Just</span> is similar to <span class="operator">From</span>, but note
+  that <span class="operator">From</span> will dive into an array or an iterable or something of
+  that sort to pull out items to emit, while <span class="operator">Just</span> will simply emit
+  the array or iterable or what-have-you as it is, unchanged, as a single item.
+ </p><p>
+  Note that if you pass <code>null</code> to <span class="operator">Just</span>, it will return
+  an Observable that <em>emits</em> <code>null</code> as an item. Do not make the mistake of
+  assuming that this will return an empty Observable (one that emits no items at all). For that,
+  you will need the <a href="empty-never-throw.html"><span class="operator">Empty</span></a>
+  operator.
+ </p></figcaption>
 </figure>
 
-<p>
- The <span class="operator">Just</span> operator converts an item into an Observable that emits
- that item.
-</p><p>
- <span class="operator">Just</span> is similar to <span class="operator">From</span>, but note
- that <span class="operator">From</span> will dive into an array or an iterable or something of
- that sort to pull out items to emit, while <span class="operator">Just</span> will simply emit
- the array or iterable or what-have-you as it is, unchanged, as a single item.
-</p><p>
- Note that if you pass <code>null</code> to <span class="operator">Just</span>, it will return
- an Observable that <em>emits</em> <code>null</code> as an item. Do not make the mistake of
- assuming that this will return an empty Observable (one that emits no items at all). For that,
- you will need the <a href="empty-never-throw.html"><span class="operator">Empty</span></a>
- operator.
-</p>
-
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="from.html"><span class="operator">From</span></a></li>
  <li><a href="repeat.html"><span class="operator">Repeat</span></a></li>
@@ -68,7 +67,7 @@ id: just
      </p><p>
       <code>just</code> does not by default operate on any particular scheduler.
      </p>
-     <h4>Sample code</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 // Observable emits "some string" as a single item
 def observableThatEmitsAString = Observable.just("some string"); 
@@ -110,6 +109,7 @@ def observableThatEmitsSeveralNumbers = Observable.just( 1, 2, 3, 4, 5 );</pre><
       Scheduler, but you can also pass in a Scheduler of your choosing as an optional second
       parameter, in which case it will operate on that Scheduler instead.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable.just(42);
 
