--- a/documentation/operators/materialize-dematerialize.html
+++ b/documentation/operators/materialize-dematerialize.html
@@ -32,7 +32,7 @@ id: materialize-dematerialize
  </p></figcaption>
 </figure>
 
-<h4>See also:</h4>
+<h4>See Also</h4>
 <ul>
  <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/08_Transformation.html#MaterializeAndDematerialize"><cite>Introduction to Rx</cite>: Materialize and Dematerialize</a></li>
 </ul>
@@ -61,6 +61,7 @@ id: materialize-dematerialize
       <code>Notification</code> objects and emits them as the emissions from the Observable it returns. For
       example:
      </p>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 numbers = Observable.from([1, 2, 3]);
 
@@ -91,6 +92,7 @@ Sequence complete</pre></div>
       objects from the source Observable into notifications from the resulting Observable.
       The following example dematerializes the materialized Observable from the previous section:
      </p>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 numbers = Observable.from([1, 2, 3]);
 
@@ -150,6 +152,7 @@ Sequence complete</pre></div>
       Observable, you have to assemble it by hand by manually creating and emitting the
       <code>Notification</code> objects that represent Observable notification calls.
      </p>
+     <h4>Sample Code</h4>
      <div class="code javascript"><pre>
 var source = Rx.Observable
     .fromArray([
