--- a/documentation/operators/min.html
+++ b/documentation/operators/min.html
@@ -12,16 +12,17 @@ id: min
 
    <h1>Min</h1>
    <h3>emits the item from the source Observable that had the minimum value</h3>
+
    <figure>
     <img src="images/min.c.png" width="640" alt="Min" />
+    <figcaption><p>
+     The <span class="operator">Min</span> operator operates on an Observable that emits numbers
+     (or items that can be evaluated as numbers), and emits a single item: the item with the smallest
+     number.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Min</span> operator operates on an Observable that emits numbers
-    (or items that can be evaluated as numbers), and emits a single item: the item with the smallest
-    number.
-   </p>
 
-   <h4>See Also:</h4>
+   <h4>See Also</h4>
    <ul>
     <li><a href="min.html"><span class="operator">Min</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
@@ -96,7 +97,7 @@ id: min
       <figcaption><p>
        RxJS implements the <code>min</code> operator. It takes an optional comparer function that it
        will use instead of its default to compare the value of two items.</p>
-       <h4>Sample code:</h4>
+       <h4>Sample Code</h4>
        <div class="code javascript"><pre>
 var source = Rx.Observable.fromArray([1,3,5,7,9,2,4,6,8]).min();
 
@@ -120,7 +121,7 @@ Completed</pre></div></figcaption>
        <code>minBy</code> emits a list. If more than one item has the minimum key value, each such
        item will be represented in the list.
        </p>
-       <h4>Sample code:</h4>
+       <h4>Sample Code</h4>
        <div class="code javascript"><pre>
 var source = Rx.Observable.fromArray([1,3,5,7,9,2,4,6,8,1])
                .minBy( function (x) { return x; } );
