--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -12,19 +12,21 @@ id: scan
 
    <h1>Scan</h1>
    <h3>apply a function to each item emitted by an Observable, sequentially, and emit each successive value</h3>
+
    <figure>
     <img src="images/scan.c.png" width="640" alt="Scan" />
+    <figcaption><p>
+     The <span class="operator">Scan</span> operator applies a function to the first item emitted
+     by the source Observable and then emits the result of that function as its own first emission.
+     It also feeds the result of the function back into the function along with the second item
+     emitted by the source Observable in order to generate its second emission. It continues to
+     feed back its own subsequent emissions along with the subsequent emissions from the source
+     Observable in order to create the rest of its sequence.
+    </p><p>
+     This sort of operator is sometimes called an &ldquo;accumulator&rdquo; in other contexts.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Scan</span> operator applies a function to the first item emitted
-    by the source Observable and then emits the result of that function as its own first emission.
-    It also feeds the result of the function back into the function along with the second item
-    emitted by the source Observable in order to generate its second emission. It continues to
-    feed back its own subsequent emissions along with the subsequent emissions from the source
-    Observable in order to create the rest of its sequence.
-   </p><p>
-    This sort of operator is sometimes called an &ldquo;accumulator&rdquo; in other contexts.
-   </p>
+
    <h4>See Also</h4>
    <ul>
     <li><a href="reduce"><span class="operator">Reduce</span></a></li>
@@ -56,7 +58,7 @@ id: scan
        first <i>n</i> <a href="http://en.wikipedia.org/wiki/Triangular_number">triangular
        numbers</a>:
       </p>
-      <h4>Sample Code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 numbers = Observable.from([1, 2, 3, 4, 5]);
 
@@ -130,7 +132,7 @@ Sequence complete</pre></div>
       <figcaption><p>
        RxJS implements the <code>scan</code> operator.
       </p>
-      <h4>Sample Code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(1, 3)
     .scan(
@@ -157,7 +159,7 @@ Completed</pre></div>
        called (for the first emission from the source Observable) in place of the result from the
        missing prior call to the accumulator.
       </p>
-      <h4>Sample Code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(1, 3)
     .scan(
