--- a/documentation/operators/skiplast.html
+++ b/documentation/operators/skiplast.html
@@ -12,14 +12,16 @@ id: skipLast
 
    <h1>SkipLast</h1>
    <h3>suppress the final <i>n</i> items emitted by an Observable</h3>
+
    <figure>
     <img src="images/skipLast.c.png" width="640" alt="SkipLast" />
+    <figcaption><p>
+     You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that come
+     before them, by modifying the Observable with the <span class="operator">SkipLast</span> operator.
+    </p></figcaption>
    </figure>
-   <p>
-    You can ignore the final <i>n</i> items emitted by an Observable and attend only to those items that come
-    before them, by modifying the Observable with the <span class="operator">SkipLast</span> operator.
-   </p>
-   <h4>See Also:</h4>
+
+   <h4>See Also</h4>
    <ul>
     <li><a href="last.html"><span class="operator">Last</span></a></li>
     <li><a href="skip.html"><span class="operator">Skip</span></a></li>
@@ -128,7 +130,7 @@ id: skipLast
        the mechanism by which this is implemented will delay the emission of any item from the source Observable
        until <i>n</i> additional items have been emitted by that Observable.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 5)
     .skipLast(3);
@@ -168,7 +170,7 @@ Completed</pre></div>
        <code>skipLastWithTime</code> by default operates on the <code>timeout</code> Scheduler, but you may also
        pass in a Scheduler of your choosing as an optional second parameter.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.timer(0, 1000)
     .take(10)
