--- a/documentation/operators/sum.html
+++ b/documentation/operators/sum.html
@@ -12,16 +12,17 @@ id: sum
 
    <h1>Sum</h1>
    <h3>calculates the sum of numbers emitted by an Observable and emits this sum</h3>
+
    <figure>
     <img src="images/sum.c.png" width="640" alt="Sum" />
+    <figcaption><p>
+     The <span class="operator">Sum</span> operator operates on an Observable that emits numbers
+     (or items that can be evaluated as numbers), and emits a single value: the sum of all of the
+     numbers emitted by the source Observable.
+    </p></figcaption>
    </figure>
-   <p>
-    The <span class="operator">Sum</span> operator operates on an Observable that emits numbers
-    (or items that can be evaluated as numbers), and emits a single value: the sum of all of the
-    numbers emitted by the source Observable.
-   </p>
 
-   <h4>See Also:</h4>
+   <h4>See Also</h4>
    <ul>
     <li><a href="average.html"><span class="operator">Average</span></a></li>
     <li><a href="http://www.introtorx.com/Content/v1.0.10621.0/07_Aggregation.html#MaxAndMin"><cite>Introduction to Rx</cite>: Min, Max, Sum, and Average</a></li>
@@ -49,7 +50,7 @@ id: sum
       <code>sumDouble</code>, <code>sumFloat</code>, <code>sumInteger</code>, and
       <code>sumLong</code>. The following example shows how these operators work:
      </p>
-     <h4>Sample code:</h4>
+     <h4>Sample Code</h4>
      <div class="code groovy"><pre>
 def myObservable = Observable.create({ aSubscriber ->
   if(false == aSubscriber.isUnsubscribed()) aSubscriber.onNext(4);
@@ -100,7 +101,7 @@ Sequence complete</pre></div>
        RxJS implements this operator as <code>sum</code>. The following code sample shows how
        to use it:
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var source = Rx.Observable.range(0, 9).sum();
 
@@ -125,7 +126,7 @@ Completed</pre></div></figcaption>
        item, as in the illustration above, which emits the sum number of sides on the figures
        emitted by the source Observable.
       </p>
-      <h4>Sample code:</h4>
+      <h4>Sample Code</h4>
       <div class="code javascript"><pre>
 var arr = [
     { value: 1 },
